Upgrade react and react router. Fix scrollbar issue on routes.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 
 // Base
 html {
+	overflow-y: scroll;
   font-size: 16px;
   @media (min-width: $screen-sm-min) {
     font-size: 24px;
